<resources>
    <string name="app_name">5ed Pocket Helper</string>
    <string name="score">Score</string>
    <string name="modifier">Modifier</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="StatsList">
        <item>None</item>
        <item>Strength</item>
        <item>Dexterity</item>
        <item>Constitution</item>
        <item>Intelligence</item>
        <item>Wisdom</item>
        <item>Charisma</item>
    </string-array>

    <string-array name="ArmorTypeList">
        <item>None</item>
        <item>Light</item>
        <item>Medium</item>
        <item>Heavy</item>
        <item>Custom</item>
    </string-array>

    <string-array name="DamageTypeList">
        <item>None</item>
        <item>Bludgeoning</item>
        <item>Piercing</item>
        <item>Slashing</item>
        <item>Acid</item>
        <item>Cold</item>
        <item>Fire</item>
        <item>Force</item>
        <item>Lightning</item>
        <item>Necrotic</item>
        <item>Poison</item>
        <item>Psychic</item>
        <item>Radiant</item>
        <item>Thunder</item>
    </string-array>

    <string-array name="AttackRangeType">
        <item>None</item>
        <item>Melee</item>
        <item>Ranged</item>
    </string-array>

    <string-array name="WeaponHandedType">
        <item>None</item>
        <item>One Handed</item>
        <item>Two Handed</item>
    </string-array>

    <string-array name="StatsForArmorList">
        <item>None</item>
        <item>Strength</item>
        <item>Constitution</item>
        <item>Intelligence</item>
        <item>Wisdom</item>
        <item>Charisma</item>
    </string-array>

    <string-array name="SpellSchoolList">
        <item>Conjuration</item>
        <item>Abjuration</item>
        <item>Necromancy</item>
        <item>Evocation</item>
        <item>Enchantment</item>
        <item>Transmutation</item>
        <item>Illusion</item>
        <item>Divination</item>
    </string-array>

    <string-array name="SpellRitualList">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="SpellSourceList">
        <item>PHB</item>
        <item>TOEE</item>
        <item>SCAG</item>
        <item>SCPC</item>
        <item>XGTE</item>
        <item>TCoE</item>
        <item>HB</item>
    </string-array>

    <string name="strength">Str</string>
    <string name="dexterity">Dex</string>
    <string name="constitution">Con</string>
    <string name="intelligence">Int</string>
    <string name="wisdom">Wis</string>
    <string name="charisma">Cha</string>

    <string name="halfProf">Add Half Proficiency</string>
    <string name="doubleProf">Add Double Proficiency</string>

    <string name="athletic">Athletic</string>
    <string name="acrobatics">Acrobatics</string>
    <string name="sleightOfHand">Sleight of Hand</string>
    <string name="stealth">Stealth</string>
    <string name="arcana">Arcana</string>
    <string name="history">History</string>

    <string name="investigation">Investigation</string>
    <string name="nature">Nature</string>
    <string name="religion">Religion</string>
    <string name="animalHandling">Animal Handling</string>
    <string name="insight">Insight</string>
    <string name="medicine">Medicine</string>

    <string name="perception">Perception</string>
    <string name="survival">Survival</string>
    <string name="deception">Deception</string>
    <string name="intimidation">Intimidation</string>
    <string name="performance">Performance</string>
    <string name="persuasion">Persuasion</string>
    <string name="save_button_text">Save</string>
    <string name="tools_proficiency">Tools Proficiency</string>
    <string name="language_proficiency">Language Proficiency</string>
    <string name="strength_score">Strength\nScore</string>
    <string name="dexterity_score">Dexterity\nScore</string>
    <string name="constitution_score">Constitution\nScore</string>
    <string name="intelligence_score">Intelligence\nScore</string>
    <string name="charisma_score">Charisma\nScore</string>
    <string name="wisdom_score">Wisdom\nScore</string>
    <string name="cha_save_misc_bonus">Cha Save\nMisc Bonus</string>
    <string name="wis_save_misc_bonus">Wis Save\nMisc Bonus</string>
    <string name="int_save_misc_bonus">Int Save\nMisc Bonus</string>
    <string name="con_save_misc_bonus">Con Save\nMisc Bonus</string>
    <string name="misc_save_bonus">Misc Save Bonus:</string>
    <string name="str_save_misc_bonus">Str Save\nMisc Bonus</string>
    <string name="con">Con</string>
    <string name="dex">Dex</string>
    <string name="str">Str</string>
    <string name="cha">Cha</string>
    <string name="wis">Wis</string>
    <string name="int_param">Int</string>
    <string name="save_proficiency">Save Proficiency:</string>
    <string name="hp">HP</string>
    <string name="heal">Heal</string>
    <string name="temp_hp">Temp HP</string>
    <string name="damage">Damage</string>
    <string name="customblock1">CustomBlock1</string>
    <string name="custom_blocks">Custom Blocks</string>
    <string name="custom1_name">Custom1 Name:</string>
    <string name="custom1_value">Custom1 Value:</string>
    <string name="initiative">Initiative</string>
    <string name="proficiency">Proficiency</string>
    <string name="speed">Speed</string>
    <string name="ac">AC</string>
    <string name="hit_dice">Hit Dice</string>
    <string name="strength_full">Strength</string>
    <string name="death_saves">Death Saves</string>
    <string name="intelligence_full">Intelligence</string>
    <string name="dexterity_full">Dexterity</string>
    <string name="constitution_full">Constitution</string>
    <string name="wisdom_full">Wisdom</string>
    <string name="charisma_full">Charisma</string>
    <string name="customblock2">CustomBlock2</string>
    <string name="customblock3">CustomBlock3</string>
    <string name="customblock4">CustomBlock4</string>
    <string name="custom2_name">Custom2 Name:</string>
    <string name="custom2_value">Custom2 Value:</string>
    <string name="custom3_name">Custom3 Name:</string>
    <string name="custom3_value">Custom3 Value:</string>
    <string name="custom4_name">Custom4 Name:</string>
    <string name="custom4_value">Custom4 Value:</string>
    <string name="custom_block_hint">custom block hint</string>

    <!--  Change in later  -->
    <string name="no_description">No Description</string>
    <string name="no_hint">No hint</string>
    <string name="athletics_full">Athletics</string>
    <string name="acrobatics_full">Acrobatics</string>
    <string name="sleight_of_hand_full">Sleight of Hand</string>
    <string name="stealth_full">Stealth</string>
    <string name="arcana_full">Arcana</string>
    <string name="history_full">History</string>
    <string name="investigation_full">Investigation</string>
    <string name="nature_full">Nature</string>
    <string name="religion_full">Religion</string>
    <string name="animal_handling_full">Animal Handling</string>
    <string name="insight_full">Insight</string>
    <string name="medicine_full">Medicine</string>
    <string name="perception_full">Perception</string>
    <string name="survival_full">Survival</string>
    <string name="deception_full">Deception</string>
    <string name="intimidation_full">Intimidation</string>
    <string name="performance_full">Performance</string>
    <string name="persuasion_full">Persuasion</string>
    <string name="tools_proficiency_full">Tools Proficiency</string>
    <string name="language_proficiency_full">Language Proficiency</string>
    <string name="new_elements">New</string>

    <!-- FOR DEVELOPMENT   -->
    <string name="really_long_text">Integer eget libero ac lorem viverra luctus. Sed lacus turpis, aliquet ut placerat et, lacinia ut nunc. Quisque sodales mi enim. Integer auctor nibh libero, sit amet consequat ex efficitur tincidunt. Donec at dui laoreet, laoreet justo id, lobortis leo. Duis ac finibus augue. Nulla vel ultricies ipsum. Cras ornare risus nec ligula ultricies sagittis. Pellentesque aliquet sed massa vitae tincidunt. Aliquam vel dui vitae orci imperdiet accumsan. Sed ultricies ut velit vitae maximus. Aliquam porttitor ipsum ac accumsan efficitur. Nunc interdum dolor mi, at mattis nulla sagittis in. Nullam erat leo, pellentesque eget enim eu, vestibulum ullamcorper orci. Fusce dapibus augue lacus, a lobortis dolor aliquam ac.</string>
</resources>